test/fail/32-keyword_as_type.perk
// Test that using a reserved keyword as a type name fails
// Should produce: keyword 'return' cannot be used as type identifier

type return = | Empty | Cons (int, IntList)
